<resources>
    <string name="app_name">ReptCare</string>
    <string name="easy_desc">Легкий уровень сложности"\n\n"Животное будет реже требовать есть, пить, убираться за ним. Подойдет тем, кто впервые играет</string>
    <string name="medium_desc">Средний уровень сложности"\n\n"Животное будет требовать уход чаще, потребуется уделять больше времени для развлечений животного. Подойдет опытным игрокам</string>
    <string name="hard_desc">Высокий уровень сложности"\n\n"Удачи,"\n"подойдет самым опытным игрокам</string>
    <string name="choose_difficulty_level">Выберите уровень сложности</string>
    <string name="start_button_text">ДАЛЕЕ</string>
    <string name="back_button_text">НАЗАД</string>
    <string name="next_button_text">ДАЛЕЕ</string>
    <string name="skip_button">ПРОПУСТИТЬ</string>

    <string name="first">Приветствую в игре ReptCare! Ваша задача - как можно дольше поддерживать жизнедеятельность вашей рептилии и помогать ей. Если вы уже ознакомлены
    с игрой и ее функционалом, нажмите кнопку "ПРОПУСТИТЬ". В ином случае, продолжаем обучение.</string>
    <string name="second">У вашего питомца есть пять показателей: счастье, голод, жажда, температура и влажность в террариуме.
        Все они убывают с течением времени (интенивность убывания зависит от выбранной сложности). Чтобы увеличить уровень счастья, поиграйте с рептилией,
        нажав на кнопку ИГРАТЬ. Во время игры вы зарабатываете деньги.</string>
    <string name="third">Чтобы снизить голод, откройте меню выбора еды, нажав на кнопку КОРМИТЬ и выбрав нужную позицию. Еда восстанавливает разный уровень голода,
    чем дороже - тем больше прибавится. Чтобы снизить жажду, проделайте аналогичные действия, нажав на кнопку ПОИТЬ.</string>
    <string name="fourth">Также вы должны следить за климатом в террариуме. Вы можете регулировать температуру, включая и выключая лампу обогрева,
        нажав на соответствующую кнопку ВКЛ ЛАМПУ или ВЫКЛ ЛАМПУ. Чтобы поддерживать нужную влажность, опрыскивайте вашу рептилию, нажимя на кнопку ОПРЫСКИВАТЬ.</string>
    <string name="fifth">Внешний вид рептилии и иконки показателей в правой половине экрана подскажут, что требуется животному. Если иконка счастья бледнеет
        и ваша рептилия приобрела недовольный вид - это значит, что показатель счастья снизился. Остальные показатели работают по схожему принципу. Удачи!</string>


    <string name="play_but">ИГРАТЬ</string>
    <string name="lamp_on">ВКЛ ЛАМПУ</string>
    <string name="lamp_off">ВЫКЛ ЛАМПУ</string>
    <string name="humidity_but">ОПРЫСКИВАТЬ</string>
    <string name="eat_but">КОРМИТЬ</string>
    <string name="drink_but">ПОИТЬ</string>
    <string name="coin_counter">0</string>
    <string name="east_shop">МАГАЗИН НАСЕКОМЫХ</string>
    <string name="drink_shop">МАГАЗИН НАПИТКОВ</string>

</resources>